kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app.kubernetes.io/instance: kube-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: backend-image
          imagePullPolicy: Always
          resources:
            limits:
              memory: "512Mi"
              cpu: "1200m"
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app.kubernetes.io/instance: kube-app
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  labels:
    name: backend-ingress
    app.kubernetes.io/instance: kube-app
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/graphql"
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
